<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.diylc</groupId>
  <artifactId>diy-layout-creator</artifactId>
  <version>3.57.0-rockola</version>
  <packaging>jar</packaging>

  <name>diy-layout-creator</name>
  <url>https://github.com/rockola/diy-layout-creator</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>9</maven.compiler.release>
    <!-- dependency properties -->
    <itext.version>RELEASE</itext.version>
  </properties>

  <dependencies>
    <!-- Scala programming language - functional programming on JVM -->
    <dependency>
      <groupId>org.scala-lang</groupId>
      <artifactId>scala-library</artifactId>
      <version>2.12.8</version>
    </dependency>
    <!-- Apache FreeMarker - HTML templates -->
    <!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
    <dependency>
      <groupId>org.freemarker</groupId>
      <artifactId>freemarker</artifactId>
      <version>2.3.28</version>
    </dependency>
    <!-- Apache commons-io - I/O utilities -->
    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.6</version>
    </dependency>
    <!-- JAXB-api - XML (un)marshal -->
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>
    <!-- JAXB-impl - XML (un)marshal -->
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>2.3.2</version>
    </dependency>
    <!-- JAXB-core - XML (un)marshal -->
    <dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-core</artifactId>
      <version>2.3.0.1</version>
    </dependency>
    <!-- EventBus - simple event publish/subscribe framework -->
    <dependency>
      <groupId>org.greenrobot</groupId>
      <artifactId>eventbus</artifactId>
      <version>3.1.1</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mod4j.org.eclipse.xtext</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.15</version>
    </dependency>
    <!-- xStream - old XML (un)marshal library -->
    <dependency>
      <groupId>com.thoughtworks.xstream</groupId>
      <artifactId>xstream</artifactId>
      <version>1.4.11.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi</artifactId>
      <version>4.1.1</version>
    </dependency>
    <dependency>
      <groupId>net.java.balloontip</groupId>
      <artifactId>balloontip</artifactId>
      <version>1.2.4.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.nfunk/jep -->
    <dependency>
      <groupId>org.nfunk</groupId>
      <artifactId>jep</artifactId>
      <version>2.4.0</version>
    </dependency>
    <!-- Apache PdfBox - PDF creation library -->
    <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
    <dependency>
      <groupId>org.apache.pdfbox</groupId>
      <artifactId>pdfbox</artifactId>
      <version>2.0.13</version>
    </dependency>
    <!-- de.rototor.pdfbox.graphics2d - Apache PdfBox Graphics2D b ridge -->
    <dependency>
      <groupId>de.rototor.pdfbox</groupId>
      <artifactId>graphics2d</artifactId>
      <version>0.20</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.codehaus.janino/janino -->
    <dependency>
      <groupId>org.codehaus.janino</groupId>
      <artifactId>janino</artifactId>
      <version>3.0.11</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.codehaus.jettison/jettison -->
    <dependency>
      <groupId>org.codehaus.jettison</groupId>
      <artifactId>jettison</artifactId>
      <version>1.4.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.9.11</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>itext7-core</artifactId>
      <!-- <version>${itext.version}</version> -->
      <version>7.1.9</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>com.orsonpdf</groupId>
      <artifactId>orsonpdf</artifactId>
      <version>1.7</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>28.1-jre</version>
    </dependency>
    <dependency>
      <groupId>org.abcl</groupId>
      <artifactId>abcl</artifactId>
      <version>1.6.0</version>
    </dependency>
  </dependencies>

  <repositories>
  <!--
    <repository>
      <id>clojars</id>
      <name>Clojars</name>
      <url>https://repo.clojars.org</url>
      <snapshots>
	<enabled>false</enabled>
      </snapshots>
    </repository>
  -->
    <repository>
      <id>freehep</id>
      <name>Freehep</name>
      <url>http://java.freehep.org/maven2</url>
      <snapshots>
	<enabled>false</enabled>
      </snapshots>
    </repository>
  </repositories>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <!-- Java compiler plugin -->
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
            <compilerArgument>-Xlint:all</compilerArgument>
            <useIncrementalCompilation>false</useIncrementalCompilation>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
	  <configuration>
	    <archive>
	      <manifest>
		<mainClass>org.diylc.DIYLCStarter</mainClass>
		<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
		<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
	      </manifest>
	    </archive>
	  </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
	<!-- run -->
	<plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.2.1</version>
          <configuration>
	    <executable>java</executable>
	    <arguments>
	      <argument>-splash:src/main/resources/org/diylc/images/splash.png</argument>
	      <argument>-Xms512m</argument>
	      <argument>-Xmx2048m</argument>
	      <argument>-Dorg.diylc.scriptRun=true</argument>
	      <argument>-Dfile.encoding=true</argument>
	      <argument>-classpath</argument>
	      <classpath />
              <argument>org.diylc.DIYLCStarter</argument>
	    </arguments>
          </configuration>
        </plugin>
        <!-- This plugin compiles Scala files -->
        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
          <executions>
            <execution>
              <id>scala-compile-first</id>
              <phase>process-resources</phase>
              <goals>
                <goal>add-source</goal>
                <goal>compile</goal>
              </goals>
            </execution>
            <execution>
              <id>scala-test-compile</id>
              <phase>process-test-resources</phase>
              <goals>
                <goal>testCompile</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <!-- This plugin adds all dependencies to JAR file during 'package' command.
             Pay EXTRA attention to the 'mainClass' tag. 
             You have to set name of class with entry point to program ('main' method) -->
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.5.3</version>
          <configuration>
            <descriptorRefs>
              <descriptorRef>jar-with-dependencies</descriptorRef>
            </descriptorRefs>
            <archive>
              <manifest>
		<!--
                <mainClass>DIYLCRunner</mainClass>
		-->
                <mainClass>DIYLCStarter</mainClass>
              </manifest>
            </archive>
          </configuration>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>single</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <resources>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>
  </build>
</project>
